--- a/.github/workflows/latex-to-html.yml
+++ b/.github/workflows/latex-to-html.yml
@@ -1,6 +1,13 @@
 name: Convert LaTeX to HTML
 
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
